aura-modules/src/test/modules/invalidmodule/examples-noname/__examples__/example4/example4.js
import { Element } from 'engine';


export default class Example4 extends Element {

}